syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.example.search";
option java_outer_classname = "SearchApi";

package search;

enum SearchMethod {
  TEXT = 0;
  VECTOR = 1;
}

message AddDocumentRequest {
  string id = 1;
  string title = 2;
  string content = 3;
}

message AddDocumentResponse {
  bool success = 1;
}

message SearchRequest {
  string query = 1;
  SearchMethod method = 2;
}

message SearchResult {
  string id = 1;
  string title = 2;
  string snippet = 3;
}

message SearchResponse {
  repeated SearchResult results = 1;
}

service SearchService {
  rpc addDocument(AddDocumentRequest) returns (AddDocumentResponse);
  rpc search(SearchRequest) returns (SearchResponse);
}
